--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -15,6 +15,7 @@ $content-max-width: 750px;
 $button-min-width: 12rem;
 $button-height: 2.8rem;
 $border-radius: $button-height / 2;
+$progress-pane-width: 25rem;
 
 // Paddings
 $site-padding: 4vw;
